--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container" id="container">
     <div class="row justify-content-center" id="row">
-      <form method="POST" class="col-md-8 mt-3 mb-5 shadow needs-validation" id="formulario" novalidate>
+      <form method="POST" class="col-md-8 mt-4 mb-4 shadow" id="formulario" novalidate>
         <div class="container mt-4 mb-5">
           <h1 class="text-secondary">Formulario</h1>
           <!-- Datos personales -->
@@ -205,6 +205,7 @@
           </div>
         </div>
       </form>
+      <br>
       <div class="col-md-8 align-self-center text-center shadow d-none listo">
         <div class="row justify-content-center listo">
           <div class="col align-self-center">
